completed finalscore page, spacing will need to be fixed for 8 players

--- a/src/styles/RoundScore.scss
+++ b/src/styles/RoundScore.scss
@@ -2,7 +2,7 @@
 @import 'partials/_helpers'; 
 @import 'partials/_global'; 
 
-.roundScore {
+.roundScore, 
+.losers {
    @include grid(1fr 1fr 1fr);
 }
-
