--- a/src/styles/partials/_global.scss
+++ b/src/styles/partials/_global.scss
@@ -15,6 +15,7 @@ h1, h2, h3 {
   font-family: $bold-font; 
 }
 
-.gameLoop {
+.gameLoop, 
+.game {
   @include flex(column); 
 }
